Add button to index.html

--- a/client/index.html
+++ b/client/index.html
@@ -20,6 +20,7 @@
         <label for="focus">focus?</label>
         <input type="text" id="focus" placeholder="input text">
       </form>
+      <button type="submit">enter</button>
     </div>
     <div class="chalk">
         <div class="chalk white"></div>
