Implement last three matches + added placeholder images and names

--- a/client/match-image.html
+++ b/client/match-image.html
@@ -11,9 +11,9 @@
     <div class="chalkboard-match-border">
       <h1>You've been matched!</h1>
       <div class="circle">
-        <img src="profile.webp" alt="Matched Profile">
+        <img src="images/smadge.webp" alt="Matched Profile">
       </div>
-      <h2>first last | insta:@firstlast</h2>
+      <h2>Kitty Smadge | insta:@canwepaws</h2>
     </div>
     <div class="chalk">
       <div class="chalk white"></div>
