Add second chalk; update chalk positioning

--- a/client/index.html
+++ b/client/index.html
@@ -1,30 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Keys</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <div class="chalkboard">
-    <div class="chalkboard-border">
-      <h1>what's your</h1>
-      <form>
-        <label for="name">name?</label>
-        <input type="text" id="name" placeholder="input text">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Keys</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="chalkboard">
+      <div class="chalkboard-border">
+        <h1>what's your</h1>
+        <form>
+          <label for="name">name?</label>
+          <input type="text" id="name" placeholder="input text" />
 
-        <label for="insta">insta?</label>
-        <input type="text" id="insta" placeholder="input text">
+          <label for="insta">insta?</label>
+          <input type="text" id="insta" placeholder="input text" />
 
-        <label for="focus">focus?</label>
-        <input type="text" id="focus" placeholder="input text">
-      </form>
-      <button type="submit">enter</button>
+          <label for="focus">focus?</label>
+          <input type="text" id="focus" placeholder="input text" />
+        </form>
+        <button type="submit">enter</button>
+      </div>
+      <div class="chalk-container">
+        <div class="chalk white one"></div>
+        <div class="chalk white two"></div>
+      </div>
     </div>
-    <div class="chalk">
-        <div class="chalk white"></div>
-    </div>
-  </div>
-</body>
+  </body>
 </html>
