--- a/client/login.html
+++ b/client/login.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Log In</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <div class="chalkboard">
-    <div class="chalkboard-border">
-      <h1>log in (replace with link)</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Log In</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="chalkboard">
+      <div class="chalkboard-border">
+        <h1>log in (replace with link)</h1>
+      </div>
+      <div class="chalk-container">
+        <div class="chalk white one"></div>
+        <div class="chalk white two"></div>
+      </div>
     </div>
-    <div class="chalk">
-        <div class="chalk white"></div>
-    </div>
-  </div>
-</body>
+  </body>
 </html>
