--- a/client/match-image.html
+++ b/client/match-image.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>You're Matched!</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <div class="chalkboard">
-    <div class="chalkboard-match-border">
-      <h1>You've been matched!</h1>
-      <div class="circle">
-        <img src="images/smadge.webp" alt="Matched Profile">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>You're Matched!</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="chalkboard">
+      <div class="chalkboard-match-border">
+        <h1>You've been matched!</h1>
+        <div class="circle">
+          <img src="images/smadge.webp" alt="Matched Profile" />
+        </div>
+        <h2>Kitty Smadge | insta:@canwepaws</h2>
       </div>
-      <h2>Kitty Smadge | insta:@canwepaws</h2>
+      <div class="chalk-container">
+        <div class="chalk white one"></div>
+        <div class="chalk white two"></div>
+      </div>
     </div>
-    <div class="chalk">
-      <div class="chalk white"></div>
-      <div class="chalk white two"></div>
-    </div>
-  </div>
-</body>
+  </body>
 </html>
