--- a/client/match.html
+++ b/client/match.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>You're Matched!</title>
-  <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-  <div class="chalkboard">
-    <div class="chalkboard-match-border">
-      <h1>You've been matched!</h1>
-      <h2>first last | insta:@firstlast</h2>
-    </div>
-    <div class="chalk">
-        <div class="chalk white"></div>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>You're Matched!</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="chalkboard">
+      <div class="chalkboard-match-border">
+        <h1>You've been matched!</h1>
+        <h2>first last | insta:@firstlast</h2>
+      </div>
+      <div class="chalk-container">
+        <div class="chalk white one"></div>
         <div class="chalk white two"></div>
+      </div>
     </div>
-  </div>
-</body>
+  </body>
 </html>
