Implement eraser at bottom of each page

--- a/client/login.html
+++ b/client/login.html
@@ -15,6 +15,10 @@
         <div class="chalk white one"></div>
         <div class="chalk white two"></div>
       </div>
+      <div class="container">
+        <div class="rounded-rectangle black"></div>
+        <div class="rounded-rectangle gray"></div>
+      </div>
     </div>
   </body>
 </html>
