Log in is now button instead of header

--- a/client/login.html
+++ b/client/login.html
@@ -9,7 +9,7 @@
   <body>
     <div class="chalkboard">
       <div class="chalkboard-border">
-        <h1>log in (replace with link)</h1>
+        <button type="log in">log in</button>
       </div>
       <div class="chalk-container">
         <div class="chalk white one"></div>
